# serialize_pose

./: .clang-format  CMakeLists.txt
include/: serialize_pose.hpp
src/: main.cpp  serialize_pose.cpp
